--- a/JssWebAbc/pom.xml
+++ b/JssWebAbc/pom.xml
@@ -4,13 +4,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>JwtSso</artifactId>
-        <groupId>com.jsso</groupId>
+        <groupId>com.jsso.wt</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>JssWebAbc</artifactId>
     <version>0.0.1</version>
-
-
+    <dependencies>
+        <dependency>
+            <groupId>com.jsso.wt</groupId>
+            <artifactId>JssCommon</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <finalName>JssWebAbc</finalName>
+    </build>
 </project>
