--- a/JssLogin/pom.xml
+++ b/JssLogin/pom.xml
@@ -4,13 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>JwtSso</artifactId>
-        <groupId>com.jsso</groupId>
+        <groupId>com.jsso.wt</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>JssWebXyz</artifactId>
+    <artifactId>JssLogin</artifactId>
     <version>0.0.1</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.jsso.wt</groupId>
+            <artifactId>JssCommon</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
